--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body {
 }
 
 @media (max-width: 768px) {
+  
   .aaa {
     text-align: center;
   }
@@ -47,13 +48,11 @@ ul {
   padding: 0px;
 }
 
-li,
-h3 {
+li, h3 {
   list-style: none;
 }
 
-input,
-button {
+input,button {
   outline: none;
 }
 
