--- a/style.css
+++ b/style.css
@@ -33,8 +33,9 @@
   margin: 0 auto 0;
 }
 
-.task,
-.task-form__new-task {
+.task-form__new-task,
+.list__label,
+.list__input {
   width: 56%;
   display: inline-block;
   flex-grow: 1;
@@ -44,24 +45,20 @@
   display: flex;
 }
 
-
-
-ul {
+.list {
   margin: 0;
   padding: 0px;
 }
 
-li,
-h3 {
+.list_item {
   list-style: none;
 }
 
-input,
-button {
+.button {
   outline: none;
 }
 
-button {
+.button {
   background: none;
   border: 0px;
   color: #888;
@@ -71,7 +68,7 @@ button {
   cursor: pointer;
 }
 
-button:hover {
+.button:hover {
   color: #3a3A3a;
 }
 
@@ -86,7 +83,8 @@ button:hover {
   text-transform: uppercase;
 }
 
-input[type="text"] {
+.list__input, 
+.task-form__new-task {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -99,8 +97,9 @@ input[type="text"] {
   color: #888;
 }
 
-input[type="text"]:focus {
+.list__input:focus {
   color: #333;
+  outline: none;
 }
 
 /* New Task */
@@ -113,62 +112,67 @@ input[type="text"]:focus {
   width: 318px;
 }
 
+
 /* Task list */
-li {
+.list__item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
-
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-li>* {
+.list__item>* {
   vertical-align: middle;
 }
 
-li>input[type="checkbox"] {
+.list__checkbox {
   margin: 0 10px;
 }
 
-li>label {
+.list__item > .list__label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
 
-li>input[type="text"] {
+.list__item > .list__input {
   width: 226px;
 }
 
-button.delete img {
+.list__button_delete .button__img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
 
-button.delete img:hover {
+.list__button_delete .button__img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+.completed__list .list__label {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type="text"] {
+
+.list .list__item .list__input {
   display: none;
 }
 
-ul li.editMode input[type="text"] {
+.list .list__item_edit .list__input {
+  display: inline-block;
+}
+
+.list__item_edit .list__input {
   display: inline-block;
   width: 224px;
 }
 
-ul li.editMode label {
+.list__item_edit .list__label {
   display: none;
 }
